moving scrollbar a little

--- a/app/assets/javascripts/backbone/templates/lineup-player-template.html
+++ b/app/assets/javascripts/backbone/templates/lineup-player-template.html
@@ -47,6 +47,7 @@
 
             <!-- Plus button to add player -->
             <td class="action-icon" data-value="+ "><a class="add-to-lineup" href="#_">+</a></td>
+            <td class="scroll-dist">&nbsp;</td>
         </tr>
     <% }); %>
 
