--- a/app/assets/stylesheets/utilities.css.scss
+++ b/app/assets/stylesheets/utilities.css.scss
@@ -33,3 +33,22 @@
 .red {
   color: red;
 }
+/*
+.js-draft-receiver::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+.js-draft-receiver::-webkit-scrollbar-button:start:decrement,
+.js-draft-receiver::-webkit-scrollbar-button:end:increment  {
+    display: none;
+}
+ 
+.js-draft-receiver::-webkit-scrollbar-track-piece  {
+    background: #333;
+}
+ 
+.js-draft-receiver::-webkit-scrollbar-thumb:vertical {
+    
+    background-color: #505e6c;
+}
+*/
