--- a/app/views/lineups/_draft_team.html.erb
+++ b/app/views/lineups/_draft_team.html.erb
@@ -67,6 +67,7 @@
           <th class="salary">SALARY</th>
           <th class="ffpg">FPPG</th>
           <th class="add">&nbsp;</th>
+          <th class="scroll-dist">&nbsp;</th>
         </tr>
       </thead>
     </table>
@@ -84,7 +85,8 @@
           <th class="opp">OPP</th>
           <th class="salary" data-defaultsort="desc">SALARY</th>
           <th class="ffpg">FPPG</th>
-          <th class="add">&nbsp;</th>
+          <th class="add">&nbsp;</th> 
+          <th class="scroll-dist">&nbsp;</th>
         </tr>
         </thead>
         <tbody id="lineup-eligible-players-el">
