creating a scorecard view, rendering the entry data independently on player data

--- a/app/views/entries/_inner_scorecard.html.erb
+++ b/app/views/entries/_inner_scorecard.html.erb
@@ -12,7 +12,7 @@
 </div>
 <div class="col-md-2 panelThree"><strong class="panelStrong">SCORE</strong>
 
-  <h2 class="panelHeading total-score"><%= @entry.current_fantasypoints %></h2>
+  <h2 class="panelHeading total-score"><%= @entry.get_total_score() %>XX</h2>
 </div>
 <div class="clearfix"></div>
 <!--Score Card-->
