--- a/app/assets/javascripts/backbone/templates/entry-template.html
+++ b/app/assets/javascripts/backbone/templates/entry-template.html
@@ -14,18 +14,6 @@
     </div>
     <div class="col-md-2 panelThree"><strong class="panelStrong">SCORE</strong>
 
-        <h2 class="panelHeading total-score"><%= entry.get('fps') %></h2>
+        <h2 class="panelHeading total-score"><%= entry.get_total_score() %></h2>
     </div>
-    <div class="clearfix"></div>
-    <!--Score Card-->
-    <div class="mylineup-spots">
-        <div class="scorecard2">
-            <table class="scorecardTable" cellpadding="10" cellspacing="10">
-                <tbody class="scorecardBody">
-
-                </tbody>
-            </table>
-        </div>
-    </div>
-
 </script>
