--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -2,7 +2,9 @@
 <%= Rails.application.assets.find_asset('backbone/templates/player-template.html').to_s.html_safe %>
 <%= Rails.application.assets.find_asset('backbone/templates/entry-template.html').to_s.html_safe %>
 <%= Rails.application.assets.find_asset('backbone/templates/games-template.html').to_s.html_safe %>
+<%= Rails.application.assets.find_asset('backbone/templates/scorecard-template.html').to_s.html_safe %>
 <%= Rails.application.assets.find_asset('backbone/templates/entry-summary-template.html').to_s.html_safe %>
+
 
 <div data-entry_id="<%= @entry_id %>" data-contest_id="<%= @entry.contest.id %>"
             class="capitalcontent gamecenter">
