--- a/app/assets/javascripts/backbone/templates/entry-summary-template.html
+++ b/app/assets/javascripts/backbone/templates/entry-summary-template.html
@@ -6,7 +6,7 @@
         <td><span class="entry-min-remaining"><%= entry.min_left() %></span>
             <progress class="entry-progress-bar" value="<%= entry.min_left() %>" max="480"></progress>
         </td>
-        <td class="fantasypoints"><%= entry.get('fps') %></td>
+        <td class="fantasypoints"><%= entry.get_total_score() %></td>
         <!--<td>$300K NFL Bomb Entry</td>-->
         <td><!--1st Prize $500, etc --></td>
         <!--<td>< number_to_currency(@contest.prize, unit: '$') %> < @contest.sport %> < @contest.contest_type %></td>-->
