add parseFloat to change 0.0 to 0

--- a/app/assets/javascripts/backbone/templates/player-template.html
+++ b/app/assets/javascripts/backbone/templates/player-template.html
@@ -28,6 +28,6 @@
                 <%= percent %> %<br> OWNED
 
         </td>
-        <td><h1 class="score"><%= model.get('currfps') %></h1></td>
+        <td><h1 class="score"><%= parseFloat(model.get('currfps')) %></h1></td>
     </tr>
 </script>
