--- a/app/views/accounts/add_fund.html.erb
+++ b/app/views/accounts/add_fund.html.erb
@@ -10,20 +10,11 @@
     <div class="addfunds-content">
       <div class="deposit-amount">
         <div class="deposit-item pull-left">
-          <input type="radio" name="deposit_type" id="deposit_10"> $10
-        </div>
-        <div class="deposit-item pull-left">
-          <input type="radio" name="deposit_type" id="deposit_10"> $25
-        </div>
-        <div class="deposit-item pull-left">
-          <input type="radio" name="deposit_type" id="deposit_10"> $50
-        </div>
-        <div class="deposit-item pull-left">
           <div class="pull-left">
-            <input type="radio" name="deposit_type" id="deposit_10">&nbsp;$&nbsp;
+            In whole dollar amounts &nbsp;$&nbsp;
           </div>
           <div class="pull-left">
-            <input type="text" class="form-control" id="deposit_custom_amount">
+            <input type="text" class="form-control" id="depositAmount" style="width: 50px; height: 23px;" /> 
           </div>
           <div class="clear"></div>
         </div>
@@ -143,7 +134,7 @@
         
         <div class="form-group">
           <div class="col-sm-offset-4 col-sm-2">
-            <button type="submit" class="btn btn-default btn-deposit">Deposit</button>
+            <button id="existingDeposit" type="submit" class="btn btn-default btn-deposit">Deposit</button>
           </div>
           <div class="col-sm-4">
             <button id="stripeSubmit" type="submit" class="btn btn-default btn-deposit">Add CC + Deposit</button>
