--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -70,6 +70,53 @@
 
     var data = <%= @data.to_json.html_safe %>;
 
+    data = {
+      "liveContests": [
+        {
+          "id": 52,
+          "sport": "NBA",
+          "start_at": "2003-03-17T20:44:04.984Z",
+          "end_at": "2004-03-17T20:44:04.984Z",
+          "entry_fee": "$1.0",
+          "prize": "$9.5",
+          "place": 814,
+          "results_path": "/entries/1",
+          "final_pos": 5,
+          "num_of_contestants": 10
+        }
+      ],
+      "upcomingContests": [
+        {
+          "id": 53,
+          "sport": "NBA",
+          "complete": "2014-03-16 04:00:00",
+          "entry_fee": "$1.0",
+          "end_at": "2004-03-17T20:44:04.984Z",
+          "contest_start": "2015-03-17T20:44:04.984Z",
+          "prize": "$9.5",
+          "place": 814,
+          "entry_size": 100,
+          "entries_count": 3,
+          "max_entries": 10,
+          "results_path": "/entries/1",
+          "edit_path": "/entries/1/edit",
+          "view_path": "/entries/1/view"
+        }
+      ],
+      "completedContests": [
+        {
+          "id": 55,
+          "sport": "NBA",
+          "complete": "2014-03-16 04:00:00",
+          "entry_fee": "$1.0",
+          "prize": "$9.5",
+          "place": 814,
+          "won": "$0",
+          "results_path": "/entries/1"
+        }
+      ]
+    };
+
     var liveColl = new Main.Collections.LiveContestsCollection(data.liveContests)
     var upcoColl = new Main.Collections.UpcomingContestsCollection(data.upcomingContests);
     var compColl = new Main.Collections.CompletedContestsCollection(data.completedContests);
