--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <title><%= page_title %></title>
-    <!--Le HTML5 shim, for IE6-8 support of HTML elements-->
+    <meta charset="utf-8">
     <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"></script>
-      <script src="//https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+      <%= javascript_include_tag 'html5shiv.min.js' %>
+      <%= javascript_include_tag 'respond.min.js' %>
     <![endif]-->
 
     <%= tag :meta, :name => 'stripe-key', :content => Rails.configuration.stripe[:publishable_key] %>
