adjusting the static json for further tests

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -83,7 +83,7 @@
           "place": 814,
           "results_path": "/entries/1",
           "final_pos": 5,
-          "num_of_contestants": 10
+          "num_entries": 10
         }
       ],
       "upcomingContests": [
