gray out inactive players

--- a/app/assets/stylesheets/gamecenter.css.scss
+++ b/app/assets/stylesheets/gamecenter.css.scss
@@ -322,3 +322,10 @@ progress::-moz-progress-bar {
     text-align: center
   }
 }
+
+.scorecardTable tr.gray {
+    background: #ccc;
+}
+.scorecard2 .gray {
+    color: gray;
+}
