--- a/app/views/contests/browse.html.erb
+++ b/app/views/contests/browse.html.erb
@@ -53,7 +53,9 @@
   </tbody>
 </table>
 <script>
-
+  // this piece of code should be uncommented if the realtime functionality will be 
+  // available for the home page as well
+  /*
   $(document).on('page:load ready', function () {
     if ($('#home-contests').length > 0) {
       window.homeContestsView = new Main.Views.HomeContestsView({
@@ -61,5 +63,5 @@
       });
     }
   });
-
+  */
 </script>
