checking if the game has started yet, if no then add class gray to the tr element

--- a/app/assets/javascripts/backbone/templates/player-template.html
+++ b/app/assets/javascripts/backbone/templates/player-template.html
@@ -1,5 +1,5 @@
 <script type="text/template" id="player-template">
-    <tr class="" data-player-id="<%= model.get('id') %>" data-game-id="<%= model.getGameID() %>">
+    <tr class="<%= model.hasGameStarted() ? "" : "gray" %>" data-player-id="<%= model.get('id') %>" data-game-id="<%= model.getGameID() %>">
         <td><h1 class="role"><%= position %></h1></td>
         <td><strong class="player-name"> <%= model.name() %> </strong>
 
