--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -61,13 +61,10 @@
           <li class="item-header">Partners</li>
           <li class="partner-links">
             <a href="#">
-              <%= image_tag 'paypal.png' %>
+              <%= image_tag 'stripe.png', :height => 20 %>
             </a>
             <a href="#">
-              <%= image_tag 'stats.png', alt:'Fantasy capital Stats' %>
-            </a>
-            <a href="#">
-              <%= image_tag 'rotowire.png' %>
+              <%= image_tag 'sports_data.png', :height => 20 %>
             </a>
           </li>
         </ul>
