update links in footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -41,14 +41,14 @@
         <ul class="contact-section">
           <li class="item-header">Connect With Us</li>
           <li class="social-links">
-            <%= link_to '#_' do %>
+            <%= link_to 'https://www.facebook.com/fantasycapital' do %>
               <%= image_tag 'square_facebook.png', alt: 'Fantasy Capital Facebook page' %>
             <% end %>
-            <%= link_to '#_' do %>
+            <%= link_to 'https://twitter.com/fantasycapital' do %>
               <%= image_tag 'square_twitter.png', alt: 'Fantasy Capital Twitter page' %>
             <% end %>
             <br />
-            <%= link_to '#_' do %>
+            <%= link_to 'https://plus.google.com/u/0/113355143365224061494/about' do %>
               <%= image_tag 'square_gplus.png', alt: 'Fantasy Capital Google Plus page' %>
             <% end %>
 
