--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,7 +13,7 @@
             <a href="#">Home</a>
           </li>
           <li>
-            <a href="#">Contact Us</a>
+            <a href="mailto:support@fantasycapital.com">Contact Us</a>
           </li>
           <li>
             <a href="#">Terms</a>
