--- a/app/views/projections/stats_by_game.html.erb
+++ b/app/views/projections/stats_by_game.html.erb
@@ -1,10 +1,9 @@
-<% stats = Projection::Stat::STATS_ALLOWED.keys - ["minutes"] %>
 <table class="table table-striped sortable">
   <thead>
     <tr>
       <th>Player</th>
       <th>Game</th>
-      <% stats.each do |stat| %>
+      <% @stats.each do |stat| %>
         <th class="text-right" width="11%"><%= stat %></th>
       <% end %>
     </tr>
@@ -16,7 +15,7 @@
         <td><%= gp.player.name %></td>
         <td><%= gp.game.start_date.in_time_zone("EST") %></td>
         <% player_stats = Projection::Stat.where(player: gp.player, game: gp.game).all %>
-        <% stats.map {|s| lookup_stat(player_stats, gp.game.stats_event_id, gp.player, s)}.each do |stat| %>
+        <% @stats.map {|s| lookup_stat(player_stats, gp.game.stats_event_id, gp.player, s)}.each do |stat| %>
           <% if stat %>
             <td class="text-right"><%= "%.2f" % stat.stat_value %></td>
           <% else %>
