--- a/app/views/projections/with_stats.html.erb
+++ b/app/views/projections/with_stats.html.erb
@@ -1,11 +1,10 @@
-<% stats = Projection::Stat::STATS_ALLOWED.keys - ["minutes"] %>
 <table class="table table-striped sortable">
   <thead>
     <tr>
       <th>Player</th>
       <th>Game</th>
       <th class="text-right">Projection</th>
-      <% stats.each do |stat| %>
+      <% @stats.each do |stat| %>
         <th class="text-right" width="9%"><%= stat %></th>
       <% end %>
     </tr>
@@ -16,10 +15,10 @@
       <tr>
         <td><%= link_to proj.player.name, stats_by_game_projections_path(player_id: proj.player.id) %></td>
         <td><%= proj.scheduled_game.start_date.in_time_zone("EST") %></td>
-        <td class="text-right"><%= link_to "%.2f" % proj.fp, projection_projection_by_stats_path(proj), style: 'font-size:20px;' %></td>
-        <% stats.map {|s| stat_of(proj, s)}.each do |stat| %>
+        <td class="text-right"><%= link_to "%.2f" % (proj.fp || -99 ), projection_projection_by_stats_path(proj), style: 'font-size:20px;' %></td>
+        <% @stats.map {|s| stat_of(proj, s)}.each do |stat| %>
           <% if stat %>
-            <td class="text-right"><%= link_to "%.3f" % stat.fp, projection_projection_by_stat_projection_by_stat_and_games_path(proj, stat) %></td>
+            <td class="text-right"><%= link_to "%.3f" % (stat.fp || -99), projection_projection_by_stat_projection_by_stat_and_games_path(proj, stat) %></td>
           <% else %>
             <td></td>
           <% end %>
