cutup of the home page

--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -35,7 +35,18 @@
   background-color: #2E363E;
   height: 50px;
   font-family: $main-font; //'droid_sansregular';
+  /*
   background: image-url('nav-bg.png') no-repeat center center;
+  */
+  background: #505e6c; /* Old browsers */
+  background: -moz-linear-gradient(top, #505e6c 0%, #2d353c 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#505e6c), color-stop(100%,#2d353c)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #505e6c 0%,#2d353c 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #505e6c 0%,#2d353c 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #505e6c 0%,#2d353c 100%); /* IE10+ */
+  background: linear-gradient(to bottom, #505e6c 0%,#2d353c 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#505e6c', endColorstr='#2d353c',GradientType=0 ); /* IE6-9 */
+
 
   .line {
     height: 2px;
@@ -51,10 +62,17 @@
 
   li.welcome-box {
     text-align: center;
-    min-width: 220px;
+    min-width: 260px;
     background-color: #2e363e;
     float: right;
-
+    background: #39434d; /* Old browsers */
+    background: -moz-linear-gradient(top, #39434d 0%, #21272c 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#39434d), color-stop(100%,#21272c)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #39434d 0%,#21272c 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #39434d 0%,#21272c 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #39434d 0%,#21272c 100%); /* IE10+ */
+    background: linear-gradient(to bottom, #39434d 0%,#21272c 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#39434d', endColorstr='#21272c',GradientType=0 );
     .welcome-text{
       padding-top: 13px;
       padding-bottom: 13px;
@@ -98,7 +116,7 @@
     }
     
     .first-name {
-      color: #0FEA6C;
+      color: #15E884;
     }
     .arrow {
       color: #0FEA6C;
@@ -166,4 +184,16 @@
     }
   }
 
+}
+
+
+.topbarWraper .navbar-nav > li > a {
+  padding: 0;
+
+}
+
+
+.topbarWraper .topbar-nav {
+  height: 41px;
+  min-height: 0;
 }
