--- a/app/assets/stylesheets/balance_block.css.scss
+++ b/app/assets/stylesheets/balance_block.css.scss
@@ -1,7 +1,6 @@
 $font: "oswald-regular";
 
 header .balanceBlock {
-  border-top: solid 2px #0FEA6C;
   top: -2px;
   position: relative;
   z-index: 1000;
@@ -9,19 +8,39 @@ header .balanceBlock {
   float: right;
   min-height: 130px;
   margin: 0 0 20px 0;
-  padding: 22px 25px;
+  padding: 27px 32px 17px;
   width: 300px;
   font-family: $font;
   font-size: 1.15em;
+  background: #39434d; /* Old browsers */
+  background: -moz-linear-gradient(top, #39434d 0%, #21272c 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#39434d), color-stop(100%,#21272c)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #39434d 0%,#21272c 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #39434d 0%,#21272c 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #39434d 0%,#21272c 100%); /* IE10+ */
+  background: linear-gradient(to bottom, #39434d 0%,#21272c 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#39434d', endColorstr='#21272c',GradientType=0 );
+  box-shadow: 0 0 5px #2E2C3B;
+  .top-border {
+    width: 100%;
+    height: 2px;
+    background-color: #0FEA6C;
+    position: absolute;
+    top: 0;
+    left: 0;
+    box-shadow: 0 0 3px #000;
+  }
   strong {
+    font-size: 14px;
     color: #fff;
     text-transform: uppercase;
   }
   strong.ajax-modal {
-    color: #0FEA6C;
+    color: #15E884;
     i {
-      font-weight: bold;
-      top: -1px;
+      font-size: 9px;
+      top: -2px;
+      margin-left: 3px;
     }
   }
   sup {
