--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -248,7 +248,7 @@ header {
     float: left;
     margin: 0;
     padding: 0;
-    margin-top: 30px;
+    margin-top: 24px;
     margin-bottom: 30px;
   }
 }
@@ -542,10 +542,12 @@ ul.contest {
   float: right;
 }
 
-.refer-friends {
+.refer-friends,
+.learn-more {
   color: #0FEA6C;
   font-weight: bold;
   font-size: 14px;
+  line-height: 41px;
 }
 
 .filter-row {
