--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,6 +10,7 @@
 
     <% if current_user %>
       <div class='balanceBlock'>
+        <div class="top-border"></div>
         <strong>Your Balance</strong>
         <strong class='ajax-modal pull-right' id='add-fund' data-url="<%= add_fund_accounts_path %>">
           Add Funds
