--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -646,3 +646,8 @@ h3.panel-group-title{
   font-family: "oswald-regular";
   font-size: 1.2em;
 }
+
+.capitalbanner .never-played-guide {
+  height: 80px;
+  background-color: #13F089;
+}
