--- a/app/views/contests/browse.html.erb
+++ b/app/views/contests/browse.html.erb
@@ -1,3 +1,13 @@
+<% content_for :banner do %>
+  <div class="capitalbanner">
+    <div class="banner">
+      <img src="http://placehold.it/1000x300/2e363e/15E884" width="1000" height="300"></img>
+    </div>
+    <div class="never-played-guide">
+
+    </div>
+  </div>
+<% end %>
 <!-- homepage -->
 <div class='welcomeNote'>Enter a Contest, then Draft a Team and Win Cash</div>
 
