arrow-down, image placeholders

--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -74,8 +74,7 @@
     background: linear-gradient(to bottom, #39434d 0%,#21272c 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#39434d', endColorstr='#21272c',GradientType=0 );
     .welcome-text{
-      padding-top: 13px;
-      padding-bottom: 13px;
+      line-height: 60px;
 
       a:hover{
         text-decoration: none;
@@ -88,19 +87,21 @@
       right: 0;
       list-style: none;
       padding-left: 0;
-      margin-top: 5px;
       display:none;
+      line-height: 35px;
 
       a:hover{
         text-decoration: none;
       }
     }
+
     a {
       display: inline-block;
       padding-right: 5px;
       color: white !important;
 
       &.sign-out{
+        width: 100%;
         padding: 0;
         img{
           width: 30px;
@@ -114,7 +115,8 @@
         color: #0FEA6C !important;
       }
     }
-    
+
+
     .first-name {
       color: #15E884;
     }
@@ -132,15 +134,41 @@
     }
 
     li {
+      .padding {
+        line-height: 60px;
+        height: 60px;
+        padding: 0 25px;
+      }
+      .arrow-down {
+        display: none;
+      }
       &.active {
-        background: #fff;
-        padding: 6px 10px;
+        .padding {
+          background-color: #fff;
+          box-shadow: 0 0 3px #000;
+          border-bottom: 2px solid #fff;
+        }
+        top: -2px;
+
+        .arrow-down {
+          display: block;
+          position: absolute;
+          width: 0; 
+          height: 0; 
+          border-left: 46px solid transparent;
+          border-right: 46px solid transparent;
+          border-top: 15px solid #fff;
+        }
+
         .line {
           display:block;
-          background-color: #0fea6c;
+          background-color: #69F1A3;
+          margin-top: -15px;
         }
+
         a {
           background: none;
+          color: #3F4A55;
           &:hover{
             background: white;
           }
@@ -157,8 +185,6 @@
   ul{
     width: 100%;
     li {
-      padding: 6px 10px;
-
       &:last-child {
         border-right: none;
       }
