--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -650,4 +650,14 @@ h3.panel-group-title{
 .capitalbanner .never-played-guide {
   height: 80px;
   background-color: #13F089;
+  color: #0B9052;
+  line-height: 25px;
+}
+
+.capitalbanner .never-played-guide h2 {
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 20px 0 0 0;
+  margin: 0;
 }
