--- a/app/views/contests/browse.html.erb
+++ b/app/views/contests/browse.html.erb
@@ -1,10 +1,19 @@
 <% content_for :banner do %>
   <div class="capitalbanner">
     <div class="banner">
-      <img src="http://placehold.it/1000x300/2e363e/15E884" width="1000" height="300"></img>
+      <img src="http://placehold.it/1000x300/2e363e/15E884" width="1000" height="300">
     </div>
-    <div class="never-played-guide">
-
+    <div class="never-played-guide clearfix">
+      <div class="pull-left">
+        <img src="http://placehold.it/100x80/13F089/ffffff" width="100" height="80">
+      </div>
+      <div class="pull-left">
+        <h2>Never played daily fantasy sports?</h2>
+        <p>Check out latest blog post for the Fantasy Capital quick start guide &rarr;</p>
+      </div>
+      <div class="pull-right">
+        <img src="http://placehold.it/80x80/13F089/ffffff" width="80" height="80">
+      </div>
     </div>
   </div>
 <% end %>
