Implement ability to add new bank account via /accounts/bank_accounts/new
stripe_form.js.coffee
- Add client-side account and routing number validation (also done on
  Stripe.bank_accounts.create(..) call as well so no loop hole here)
- Parse correct HTML element for deposit amount

bank_accounts_controller.rb
- Remove StripeCustomerService.new(..) call since that is only relevant
  for new CC's.  New Bank Accounts will create new recipient which is done
  in BankService::add
- Capture general exceptions and render them as error status

bank_service.rb
- Set is_default for new bank_account similar to how we do it for new CC's

new.html.erb
- Deposit amount stored in #depositAmount like for new CC's (add_funds.html.erb)

Migration files
- add is_default to bank_accounts model

--- a/app/views/bank_accounts/new.html.erb
+++ b/app/views/bank_accounts/new.html.erb
@@ -53,7 +53,7 @@
   <div class="form-group">
     <label class="col-lg-5 control-label">Amount</label>
     <div class="col-lg-5">
-      <input type="text" id="deposit-amount" class="form-control" autocomplete="off"/>
+      <input type="text" id="depositAmount" class="form-control" autocomplete="off"/>
     </div>
   </div>
 
