--- a/app/views/bank_accounts/new.html.erb
+++ b/app/views/bank_accounts/new.html.erb
@@ -1,10 +1,4 @@
-<div class="row">
-  <div class="col-lg-12">
-    <button type="button" id="populate" class="btn btn-default pull-right" style="margin-bottom: 20px;">
-      Populate Test Data
-    </button>
-  </div>
-</div>
+
 
 <%= form_tag("/withdraw", method: "post", 'data-stripe-action' => 'bankAccount') do %>
 
@@ -14,6 +8,11 @@
     <label class="col-lg-5 control-label">Account Holder's Name</label>
     <div class="col-lg-5">
       <input type="text" data-payload="name" class="form-control" autocomplete="off"/>
+    </div>
+
+    <label class="col-lg-5 control-label">Account Holder's SSN</label>
+    <div class="col-lg-5">
+      <input type="text" data-payload="tax_id" class="form-control" autocomplete="off"/>
     </div>
   </div>
 
@@ -53,12 +52,16 @@
   <div class="form-group">
     <label class="col-lg-5 control-label">Amount</label>
     <div class="col-lg-5">
-      <input type="text" id="depositAmount" class="form-control" autocomplete="off"/>
+      <input type="text" id="transferAmount" class="form-control" autocomplete="off"/>
     </div>
   </div>
 
+
+  <button type="button" id="existingTransfer" class="btn btn-large btn-primary pull-right">
+    Just Withdraw
+  </button>
   <button type="button" id="stripeSubmit" class="btn btn-large btn-primary pull-right">
-    Deposit
+    Add Bank Account + Withdraw
   </button>
 <% end %>
 
