--- a/app/views/contests/browse.html.erb
+++ b/app/views/contests/browse.html.erb
@@ -18,7 +18,7 @@
   </div>
 <% end %>
 <!-- homepage -->
-<div class='welcomeNote'>Enter a Contest, then Draft a Team and Win Cash</div>
+<!-- <div class='welcomeNote'>Enter a Contest, then Draft a Team and Win Cash</div> -->
 
 <div class="row filter-row">
   <div class="col-md-6">
