--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -19,6 +19,9 @@
           <li>
             <a href="#" class="pull-left">
               <strong class="learn-more">Learn more about Fantasy Capital</strong>
+              <div class="learn-more-img"> 
+                <img class="no-margin" src="/assets/header-learnmore-video.jpg" width="40" height="22"> 
+              </div>
             </a>
             <%= link_to invite_waiting_lists_path, class: 'refer-link pull-right' do%>
               <strong class='ajax-modal refer-friends'>Refer Friends for Cash &rarr;</strong>
@@ -27,5 +30,6 @@
         </ul>
       </div>
     </div>
+    <div class="header-close-button"></div>
   </div>
 </div>
