--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -65,6 +65,7 @@
     min-width: 260px;
     background-color: #2e363e;
     float: right;
+    line-height: 60px;
     background: #39434d; /* Old browsers */
     background: -moz-linear-gradient(top, #39434d 0%, #21272c 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#39434d), color-stop(100%,#21272c)); /* Chrome,Safari4+ */
@@ -212,14 +213,22 @@
 
 }
 
-
 .topbarWraper .navbar-nav > li > a {
   padding: 0;
 
 }
 
-
 .topbarWraper .topbar-nav {
   height: 41px;
   min-height: 0;
+}
+
+div.header-close-button {
+    position: absolute;
+    top: 14px;
+    right: 14px;
+    width: 13px;
+    height: 13px;
+    background-image: url("/assets/header-close-button.png");
+    cursor: pointer;
 }
