Credit card deposit, bank acct transfer clean up. List out default bank accts and credit cards that's used.
bank_accounts_controller
- Remove ability to transfer funds at the same time as adding a
  new bank account
- Log error messages

credit_cards_controller
- Log error messages

bank_service.rb
- use update_all instead of loop to set is_default: false for
  old bank accts

bank_withdrawal_service.rb
- Spelling correction

card_service.rb
- Use latest card added as default (this mirrors the same
  behavior as adding a bank account - latest added is default)

add_fund.html.erb
- Some simple FE qualifiers to tell user that they need to add
  CC first (if they don't have a default CC)

withdraw.html.erb
- Change existing code to a form where user can withdraw/transfer
  money out of their FC account. If user doesn't have a default
  bank account set for the transfer, instruct them to add a
  bank account

new.html.erb
- Remove ability to withdraw funds while adding a bank account to
  simplify behavior and controller code a bit

_account_heading.html.erb
- Add a menu bar item to add a bank account

stripe.rb
- When in development mode, get stripe codes from ENV variable.
  This is to help enforce the use of FC's test Stripe account
  with only staging.  Developers should sign up for their own
  free Stripe account and test using their own account.

--- a/app/views/accounts/add_fund.html.erb
+++ b/app/views/accounts/add_fund.html.erb
@@ -9,6 +9,12 @@
 
     <div class="addfunds-content">
       <div class="deposit-amount">
+        <% cc = current_user.credit_cards.where(is_default: true).first
+           if cc == nil %>
+        <div class="pull-left">
+          Need to add a credit card first
+        </div><br/><br/><br/>
+        <% end %>
         <div class="deposit-item pull-left">
           <div class="pull-left">
             In whole dollar amounts &nbsp;$&nbsp;
@@ -42,7 +48,11 @@
         <div class="form-group for-credit">
           <label for="full_name" class="col-sm-4 control-label">* Credit Card Number</label>
           <div class="col-sm-6">
-            <input type="text" class="form-control" data-payload="number">
+            <input type="text" class="form-control" data-payload="number"
+                   <% if cc != nil %>
+                   value="xxxxxxxxxxxx<%= cc.last_4 %>"
+                   <% end %>
+                   >
           </div>
         </div>
 
@@ -134,7 +144,10 @@
         
         <div class="form-group">
           <div class="col-sm-offset-4 col-sm-2">
+
+            <% if cc != nil %>
             <button id="existingDeposit" type="submit" class="btn btn-default btn-deposit">Deposit</button>
+            <% end %>
           </div>
           <div class="col-sm-4">
             <button id="stripeSubmit" type="submit" class="btn btn-default btn-deposit">Add CC + Deposit</button>
