--- a/app/views/shared/_account_heading.html.erb
+++ b/app/views/shared/_account_heading.html.erb
@@ -19,6 +19,11 @@
           <span class="green">Withdrawal Request »</span>
       <%end%>
     </li>
+    <li>
+      <%= link_to new_bank_account_path do %>
+          <span class="green">Add Bank Account Request »</span>
+      <%end%>
+    </li>
     <li class="pull-right">
       <a href="#"><%= image_tag "questionmark.png", alt: "Question Mark" %></a>
     </li>
