--- a/app/views/bank_accounts/new.html.erb
+++ b/app/views/bank_accounts/new.html.erb
@@ -1,4 +1,7 @@
+<%= render partial: 'shared/account_heading' %>
 
+<h4 class="grey_bottom_border"><strong>ADD BANK ACCOUNT FORM</strong></h4>
+<div class="clearfix">&nbsp;</div>
 
 <%= form_tag("/withdraw", method: "post", 'data-stripe-action' => 'bankAccount') do %>
 
@@ -49,19 +52,8 @@
     </div>
   </div>
 
-  <div class="form-group">
-    <label class="col-lg-5 control-label">Amount</label>
-    <div class="col-lg-5">
-      <input type="text" id="transferAmount" class="form-control" autocomplete="off"/>
-    </div>
-  </div>
-
-
-  <button type="button" id="existingTransfer" class="btn btn-large btn-primary pull-right">
-    Just Withdraw
-  </button>
   <button type="button" id="stripeSubmit" class="btn btn-large btn-primary pull-right">
-    Add Bank Account + Withdraw
+    Add Bank Account
   </button>
 <% end %>
 
