--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -156,9 +156,10 @@
           position: absolute;
           width: 0; 
           height: 0; 
-          border-left: 46px solid transparent;
-          border-right: 46px solid transparent;
-          border-top: 15px solid #fff;
+          left: -3px;
+          width: 97px;
+          height: 26px;
+          background-image: url("navadd-dropshadow.png");
         }
 
         .line {
@@ -229,6 +230,6 @@ div.header-close-button {
     right: 14px;
     width: 13px;
     height: 13px;
-    background-image: url("/assets/header-close-button.png");
+    background-image: url("header-close-button.png");
     cursor: pointer;
 }
