--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -652,6 +652,7 @@ h3.panel-group-title{
   background-color: #13F089;
   color: #0B9052;
   line-height: 25px;
+  position: relative;
 }
 
 .capitalbanner .never-played-guide h2 {
@@ -671,4 +672,23 @@ h3.panel-group-title{
 
 .learn-more-img .no-margin {
   margin: 0px;
+}
+
+.fc-logo {
+    background: url("/assets/fc-small-logo.png") center center no-repeat;
+    width: 80px;
+    height: 80px;
+    margin-left: 30px;
+}
+
+.never-played-guide .close-button img {
+    position: absolute;
+    top: 10px;
+    left: 54px;
+    cursor: pointer;
+}
+.never-played-guide .close-button {
+    position: relative;
+    width: 80px;
+    height: 80px;
 }
