adjustments to the home page

--- a/app/views/contests/browse.html.erb
+++ b/app/views/contests/browse.html.erb
@@ -17,7 +17,7 @@
 <% end %>
 <!-- homepage -->
 <!-- <div class='welcomeNote'>Enter a Contest, then Draft a Team and Win Cash</div> -->
-
+<!--
 <div class="row filter-row">
   <div class="col-md-6">
     <div class="dropdown custom-dropdown">
@@ -44,7 +44,7 @@
     </a>
   </div>
 </div>
-
+-->
 <!--
 <div class="contest-help">
   <p>50/50: Finish in the top half and win the prize</p>
@@ -55,11 +55,11 @@
 </div>
 -->
 
-<table id="home-contests" class='contestHead main-grid table sortable filter-result'>
+<table id="home-contests" class='contestHead main-grid table filter-result'>
   <thead>
   <tr>
     <th class="srt-sport" data-defaultsign="reversed">SPORT</th>
-    <th class="srt-contest-name" data-defaultsign="reversed">CONTEST</th>
+    <th class="srt-contest-name" data-defaultsign="reversed">CONTEST <span class="light-gray">(?)</span></th>
     <th class="srt-live-in" data-defaultsign="reversed">LIVE IN</th>
     <th class="srt-entry-fee" data-defaultsign="reversed">ENTRY</th>
     <th data-defaultsign="reversed">PRIZE</th>
