--- a/app/assets/stylesheets/grid.css.scss
+++ b/app/assets/stylesheets/grid.css.scss
@@ -25,10 +25,15 @@ table.main-grid > tbody > tr:nth-child(odd), table.main-grid > tbody > tr:nth-ch
 
 table.main-grid {
   th {
-    background-color: #505e6c;
-    color: #fff;
+    background-color: #fff;
+    color: #505e6c;
+    font-size: 0.85em;
     border-bottom: none;
     padding: 24px 19px !important;
+    cursor: default;
+  }
+  th .light-gray {
+    color: #BCBCBC;
   }
   /*tbody tr:even*/
   /*f1f4f5*/
