--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -16,10 +16,10 @@
             <a href="mailto:support@fantasycapital.com">Contact Us</a>
           </li>
           <li>
-            <a href="#">Terms</a>
+            <a href="/terms">Terms</a>
           </li>
           <li>
-            <a href="#">Privacy</a>
+            <a href="/privacy-policy">Privacy</a>
           </li>
         </ul>
         <ul class="support-section">
