add circles to the home page banner

--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -160,6 +160,7 @@
           width: 97px;
           height: 26px;
           background-image: url("navadd-dropshadow.png");
+          z-index: 10;
         }
 
         .line {
