--- a/app/views/contests/browse.html.erb
+++ b/app/views/contests/browse.html.erb
@@ -3,6 +3,30 @@
     <div class="banner">
       <img src="<%= image_path("home-banner.png") %>" width="1000" height="300">
     </div>
+    <div class="banner-elements">
+      <div class="row banner-circles">
+        <div class="col-md-2 circle-small">
+          <img src="<%= image_path("marquee-1.png") %>">
+        </div>
+        <div class="col-md-3">
+          <div class="line"></div>
+        </div>
+        <div class="col-md-2 circle-small">
+          <img src="<%= image_path("marquee-2.png") %>">
+        </div>
+        <div class="col-md-3">
+          <div class="line"></div>
+        </div>
+        <div class="col-md-2">
+          <img src="<%= image_path("marquee-3.png") %>">
+        </div>
+      </div>
+      <div class="row banner-text">
+        <div class="col-md-4">Enter a contest</div>
+        <div class="col-md-4">Draft a team</div>
+        <div class="col-md-4 green big">Win cash</div>
+      </diV>
+    </div>
     <div class="never-played-guide clearfix">
       <div class="pull-left fc-logo"></div>
       <div class="pull-left">
