--- a/app/views/contests/browse.html.erb
+++ b/app/views/contests/browse.html.erb
@@ -26,6 +26,11 @@
         <div class="col-md-4">Draft a team</div>
         <div class="col-md-4 green big">Win cash</div>
       </diV>
+      <div class="row banner-button hide">
+        <div class="col-md-12">
+          <a href="#" class="sign-up-free">Sign-up for free</a>
+        </div>
+      </div>
     </div>
     <div class="never-played-guide clearfix">
       <div class="pull-left fc-logo"></div>
@@ -78,6 +83,26 @@
   </p>
 </div>
 -->
+<div id="home-game-types" class="row">
+  <div class="col-md-7 heading border-bottom">Upcoming Games</div>
+  <div class="col-md-5 clearfix">
+    <div class="row game-filters">
+      <div class="col-md-4 border-right-none active">Public</div>
+      <div class="col-md-4 border-right-none">Private</div>
+      <div class="col-md-4">
+        <img src="<%= image_path("cornell-university-logo.jpg") %>">
+      </div>
+    </div>
+  </div>
+  <!-- <div class="col-md-1 border-bottom padding-none">&nbsp;</div> -->
+</div>
+
+<div id="home-filter-games">
+  <div class="expand">+ Filter Games</div>
+  <div class="row hide">
+    <!-- -->
+  </div>
+</div>
 
 <table id="home-contests" class='contestHead main-grid table filter-result'>
   <thead>
@@ -91,10 +116,12 @@
     <th data-defaultsort="disabled"></th>
   </tr>
   </thead>
+
   <tbody>
   <%= render partial: 'contest', collection: @contests %>
   </tbody>
 </table>
+
 <script>
   // this piece of code should be uncommented if the realtime functionality will be 
   // available for the home page as well
