--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,7 +5,7 @@
     <h1 class='logo'>
       <%= link_to root_path do%>
         <%= image_tag 'main_logo.png', alt: 'Fantasy Capital' %>
-        <em>Lorem ipsum eli dolor sit</em>
+        <em>Daily Fantasy Sports</em>
        <% end %>
     </h1>
 
