--- a/app/views/lineups/_draft_team.html.erb
+++ b/app/views/lineups/_draft_team.html.erb
@@ -18,7 +18,7 @@
   <h1 class="bold"><%= @contest.sport %></h1>
   <h4>(Mon-Thurs) [5 step 1 Tix Gtd.]</h4>
 
-  <h1 class='bold'> <%= number_to_currency @contest.prize, precision: 0 %> Prize Pool</h1>
+  <h1 class='bold'> <%= number_to_currency @contest.prizepool, precision: 0 %> Prize Pool</h1>
 </div>
 
 <p class='timingschedule'>
