updating the image in the topbar

--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -20,7 +20,7 @@
             <a href="#" class="pull-left">
               <strong class="learn-more">Learn more about Fantasy Capital</strong>
               <div class="learn-more-img"> 
-                <img class="no-margin" src="/assets/header-learnmore-video.jpg" width="40" height="22"> 
+                <img class="no-margin" src="<%= image_path('header-learnmore-video.jpg') %>" width="40" height="22"> 
               </div>
             </a>
             <%= link_to invite_waiting_lists_path, class: 'refer-link pull-right' do%>
